// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with children 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Array [
      Object {
        "color": "#069",
        "textDecorationLine": "underline",
      },
      Object {},
    ]
  }
>
<<<<<<< HEAD
  The Times
=======
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    The Times
  </Text>
>>>>>>> fix: tests on link component
</Text>
`;

exports[`renders correctly with specifc styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Array [
      Object {
        "color": "#069",
        "textDecorationLine": "underline",
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
>
<<<<<<< HEAD
  The Times
=======
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    The Times
  </Text>
>>>>>>> fix: tests on link component
</Text>
`;
